# SDK-Integration-Examples

./: .gitignore  LICENSE  README.md  SDKMessageExample.sln  index.html
SDKMessageExample/: SDKMessageExample.cpp  SDKMessageExample.vcxproj
SDKMessageExample/proto-files/: array.proto  grid_description.proto  nav_api.proto  nav_info.proto  nmea.proto  time.proto
SDKMessageExample/protobuf-bin/include/google/protobuf/: wire_format_lite.h
SDKMessageExample/protobuf-bin/include/google/protobuf/io/: coded_stream.h
SDKMessageExample/protobuf-bin/lib32/: libprotobuf-lite.lib  libprotobuf-lited.lib  libprotobuf.lib  libprotobufd.lib  libprotoc.lib  libprotocd.lib
SDKMessageExample/protobuf-bin/lib64/: libprotobuf-lite.lib  libprotobuf-lited.lib  libprotobuf.lib  libprotobufd.lib  libprotoc.lib  libprotocd.lib
direct_api/: README.md
direct_api/zmq_protobuf/: README.md
direct_api/zmq_protobuf/cpp/: CMakeLists.txt  README.md
direct_api/zmq_protobuf/cpp/src/: main.cpp
direct_api/zmq_protobuf/csharp/: Program.cs  README.md  SonaSoftDirectExample.csproj
direct_api/zmq_protobuf/proto/: array.proto  grid_description.proto  nav_api.proto  nav_info.proto  nmea.proto
direct_api/zmq_protobuf/python/: README.md  build_protos.py  main.py  pyproject.toml
http_json_api/typescript-client-example/: package-lock.json
http_json_api/typescript-client-example/src/: App.tsx
http_json_api/typescript-client-example/src/nav_client/: NavClient.ts  index.ts
http_json_api/typescript-client-example/src/nav_client/models/: Detection.ts  FOVType.ts  GriddedBottomDetection.ts  GriddedInwaterDetection.ts  InwaterDetectionGroup.ts  ProcessorSettingsUpdate.ts  TargetData.ts
http_json_api/typescript_client_example/: README.md  index.html  package-lock.json  package.json
http_json_api/typescript_client_example/src/: App.tsx
http_json_api/typescript_client_example/src/nav_client/models/: Heading.ts  HeadingType.ts  HistoryData.ts  Position.ts  ProcessorSettings.ts  SystemType.ts
http_json_api/typescript_client_example/src/nav_client/services/: DefaultService.ts
reference/: README.md
reference/zmq_protobuf_basics/: README.md
reference/zmq_protobuf_basics/hello_world_zmq/: CMakeLists.txt  README.md  receiver.cpp  sender.cpp
reference/zmq_protobuf_basics/protobuf_only/: CMakeLists.txt  README.md  read_addresses.cpp  write_addresses.cpp
ubuntu/: readme.md
ubuntu/examples/sonasoft_sdk/: Dockerfile  connect_to_sonasoft.cpp
using_sdk/: README.md
using_sdk/cpp/: README.md
using_sdk/cpp/imgui_viewer_example/: CMakeLists.txt  README.md  gl_scene_renderer.cpp  gl_scene_renderer.hpp  main.cpp  orbit_camera.cpp  orbit_camera.hpp  sdk_session.cpp  sdk_session.hpp  viewer_app.cpp  viewer_app.hpp  viewer_math.hpp  viewer_state.hpp  viewer_ui.cpp  viewer_ui.hpp
using_sdk/cpp/simple_example/: CMakeLists.txt  README.md  main.cpp
using_sdk/python/: README.md
using_sdk/python/drawing_example/: README.md
using_sdk/python/log_live_tiff_example/: README.md  main.py  pyproject.toml
using_sdk/python/log_live_tiff_example/output/: 20190220_152444_392_20190201SH4L044.tif  20190220_152446_997_20190201SH4L044.tif  20190220_152449_602_20190201SH4L044.tif
using_sdk/python/simple_example/: README.md  main.py  pyproject.toml
windows/SDKMessageExample/zeromq/lib/: libzmq-v143-mt-4_3_4.lib
zeromq/: README.sonasoft
zeromq/builds/msvc/vs2010/libzmq/: libzmq.props  libzmq.vcxproj
zeromq/builds/msvc/vs2017/libzmq/: libzmq.vcxproj
zeromq/include/: zmq.hpp
zeromq/src/: windows.hpp
zmq_protobuf_api/: RUNNING.md
zmq_protobuf_api/cpp_client_example/: RUNNING.md
zmq_protobuf_api/cpp_client_example/ubuntu/: readme.md
zmq_protobuf_api/cpp_client_example/ubuntu/examples/hello_world_zmq/: sender.cpp
zmq_protobuf_api/cpp_client_example/ubuntu/examples/protobuf_only/: write_addresses.cpp
zmq_protobuf_api/cpp_client_example/ubuntu/examples/sonasoft_sdk/: build_protos.sh  connect_to_sonasoft.cpp
zmq_protobuf_api/cpp_client_example/windows/SDKMessageExample/proto-files/: nav_api.proto
zmq_protobuf_api/cpp_client_example/windows/SDKMessageExample/protobuf-bin/lib64/: libprotobufd.lib
zmq_protobuf_api/python_client_example/: README.md  build_protos_linux.sh  build_protos_win.bat  plot_single_ping.py  requirements.txt
zmq_protobuf_api/python_client_example/proto_files/: array.proto  grid_description.proto  nav_info.proto  nmea.proto  time.proto
zmq_protobuf_api/python_client_example/protobuf_bin/lib64/: libprotobuf.lib  libprotocd.lib
zmq_protobuf_api/ubuntu/: readme.md
zmq_protobuf_api/ubuntu/examples/hello_world_zmq/: receiver.cpp
zmq_protobuf_api/ubuntu/examples/protobuf_only/: read_addresses.cpp
zmq_protobuf_api/windows/SDKMessageExample/: SDKMessageExample.cpp
zmq_protobuf_api/windows/SDKMessageExample/protobuf-bin/lib64/: libprotobuf-lite.lib  libprotobuf-lited.lib
zmq_protobuf_api/windows/SDKMessageExample/zeromq/lib/: libzmq-v143-mt-gd-4_3_4.lib
